refactor: Split docker compose files

--- a/leafnode-reply-allow_responses/nats-server.conf
+++ b/leafnode-reply-allow_responses/nats-server.conf
@@ -19,7 +19,7 @@ accounts: {
         password: secret-responder,
         permissions: {
           subscribe: things.>,
-          allow_responses: true
+          allow_responses: $ALLOW_RESPONSES
         }
       }
     ],
